[package]
name = "hdr10plus_tool"
version = "1.7.0"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[dependencies]
hdr10plus = { path = "./hdr10plus", features = ["hevc", "json"] }
bitvec_helpers = { version = "4.0.0", default-features = false, features = ["bitstream-io"] }
hevc_parser = { version = "0.6.9", features = ["hevc_io"] }

clap = { version = "4.5.41", features = ["derive", "wrap_help", "deprecated"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
indicatif = "0.18.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "all_series"] }
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"

[[bin]]
name = "hdr10plus_tool"
path = "src/main.rs"

[workspace]
members = [
    "hdr10plus",
]

[features]
default = ["system-font"]
system-font = ["plotters/ttf"]
internal-font = ["plotters/ab_glyph"]

[profile.release-deploy]
inherits = "release"
lto = "thin"
strip = "symbols"
