[package]
name = "hdr10plus"
version = "2.1.1"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
description = "HDR10+ metadata parsing and writing"
repository = "https://github.com/quietvoid/hdr10plus_tool/tree/master/hdr10plus"

[dependencies]
bitvec_helpers = { version = "3.1.4", default-features = false, features = ["bitstream-io"] }
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"], optional = true }
serde_json = { version = "1.0.117", features = ["preserve_order"], optional = true }
hevc_parser = { version = "0.6.1", optional = true }

[features]
hevc = ["hevc_parser"]
json = ["serde", "serde_json"]

[package.metadata.docs.rs]
all-features = true
