[package]
name = "hdr10plus"
version = "2.1.3"
authors = ["quietvoid"]
edition = "2021"
rust-version = "1.79.0"
license = "MIT"
description = "HDR10+ metadata parsing and writing"
repository = "https://github.com/quietvoid/hdr10plus_tool/tree/master/hdr10plus"

[dependencies]
bitvec_helpers = { version = "3.1.6", default-features = false, features = ["bitstream-io"] }
hevc_parser = { version = "0.6.6", optional = true }

anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"], optional = true }
serde_json = { version = "1.0.138", features = ["preserve_order"], optional = true }

libc = { version = "0.2", optional = true }

[features]
hevc = ["hevc_parser"]
json = ["serde", "serde_json"]
capi = ["libc", "json"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.capi.header]
subdirectory = "libhdr10plus-rs"

[package.metadata.capi.pkg_config]
strip_include_path_components = 1
subdirectory = false
name = "hdr10plus-rs"
filename = "hdr10plus-rs"

[package.metadata.capi.library]
rustflags = "-Cpanic=abort"
name = "hdr10plus-rs"

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(cargo_c)'] }
